--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -4,14 +4,19 @@ jobs:
 publish-hello-docker-image:
 runs-on: ubuntu-latest
 steps:
-  - uses: actions/checkout@v2
+  - name: Checkout code
+    uses: actions/checkout@v2
+
   - name: Login to GitHub Container Registry
-uses: docker/login-action@v1
-with:
-registry: ghcr.io
-username: ${{ github.actor }}
-password: ${{ secrets.GITHUB_TOKEN }}
-name: Build the hello-docker Docker image
-run: |
-       docker build . --tag ghcr.io/i-panel/routedns:latest
-       docker push ghcr.io/i-panel/routedns:latest
+    uses: docker/login-action@v1
+    with:
+      registry: ghcr.io
+      username: ${{ github.actor }}
+      password: ${{ secrets.GITHUB_TOKEN }}
+
+  - name: Build and Push Docker Image
+    run: |
+      docker build --target routedns . --tag ghcr.io/i-panel/routedns:latest
+      docker push ghcr.io/i-panel/routedns:latest
+      docker build --target routednsxtls . --tag ghcr.io/i-panel/routedns:xtls-latest
+      docker push ghcr.io/i-panel/routedns:xtls-latest
