--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -10,15 +10,14 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB }}
 
       - name: Build and Push Docker Image
         run: |
-          docker build --target routedns . --tag ghcr.io/i-panel/routedns:latest
-          docker push ghcr.io/i-panel/routedns:latest
-          docker build --target routednsxtls . --tag ghcr.io/i-panel/routedns:xtls-latest
-          docker push ghcr.io/i-panel/routedns:xtls-latest
+          docker build --target routedns . --tag kontorol/routedns:latest
+          docker push kontorol/routedns:latest
+          docker build --target routednsxtls . --tag kontorol/routedns:xtls-latest
+          docker push kontorol/routedns:xtls-latest
